--- a/VersalityClub/ios/Info.plist
+++ b/VersalityClub/ios/Info.plist
@@ -2,50 +2,69 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-        <key>CFBundleDevelopmentRegion</key>
-        <string>ru</string>
-        <key>CFBundleDisplayName</key>
-        <string>Versality</string>
-        <key>CFBundleExecutable</key>
-        <string>${EXECUTABLE_NAME}</string>
-        <key>CFBundleIdentifier</key>
-        <string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
-        <key>CFBundleInfoDictionaryVersion</key>
-        <string>6.0</string>
-        <key>CFBundleName</key>
-        <string>Versality</string>
-        <key>CFBundlePackageType</key>
-        <string>APPL</string>
-        <key>CFBundleShortVersionString</key>
-        <string>${QMAKE_SHORT_VERSION}</string>
-        <key>CFBundleVersion</key>
-        <string>${QMAKE_FULL_VERSION}</string>
-        <key>LSRequiresIPhoneOS</key>
-        <true/>
-        <key>MinimumOSVersion</key>
-        <string>${IPHONEOS_DEPLOYMENT_TARGET}</string>
-        <key>UIBackgroundModes</key>
-        <array>
-                <string>fetch</string>
-                <string>location</string>
-                <string>remote-notification</string>
-        </array>
-        <key>UISupportedInterfaceOrientations</key>
-        <array>
-                <string>UIInterfaceOrientationPortrait</string>
-        </array>
-        <key>UILaunchStoryboardName</key>
-        <string>LaunchScreen</string>
-        <key>UIFileSharingEnabled</key>
-        <string>YES</string>
-        <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-        <string>Location information needed to display promotions that are relevant to you</string>
-        <key>NSLocationWhenInUseUsageDescription</key>
-        <string>Location information needed to display promotions that are relevant to you</string>
-        <key>NSAppTransportSecurity</key>
+	<key>CFBundleDevelopmentRegion</key>
+	<string>ru</string>
+	<key>CFBundleDisplayName</key>
+	<string>Versality</string>
+	<key>CFBundleExecutable</key>
+	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleIdentifier</key>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	<key>CFBundleInfoDictionaryVersion</key>
+	<string>6.0</string>
+	<key>CFBundleName</key>
+	<string>Versality</string>
+	<key>CFBundlePackageType</key>
+	<string>APPL</string>
+	<key>CFBundleShortVersionString</key>
+	<string>${QMAKE_SHORT_VERSION}</string>
+	<key>CFBundleVersion</key>
+	<string>${QMAKE_FULL_VERSION}</string>
+        <key>CFBundleIcons</key>
         <dict>
-            <key>NSAllowsArbitraryLoads</key>
-            <true/>
+            <key>CFBundlePrimaryIcon</key>
+            <dict>
+                <key>CFBundleIconFiles</key>
+                <array>
+                    <string>AppIcon29x29.png</string>
+                    <string>AppIcon29x29@2x.png</string>
+                    <string>AppIcon29x29@3x.png</string>
+                    <string>AppIcon40x40@2x.png</string>
+                    <string>AppIcon60x60@2x.png</string>
+                    <string>AppIcon60x60@3x.png</string>
+                </array>
+            </dict>
         </dict>
+	<key>LSRequiresIPhoneOS</key>
+	<true/>
+	<key>MinimumOSVersion</key>
+	<string>${IPHONEOS_DEPLOYMENT_TARGET}</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Location information needed to display promotions that are relevant to you</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Location information needed to display promotions that are relevant to you</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>location</string>
+		<string>remote-notification</string>
+	</array>
+	<key>UIFileSharingEnabled</key>
+	<string>YES</string>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
+	<key>UIRequiresFullScreen</key>
+	<true/>
+	<key>UIStatusBarHidden</key>
+	<true/>
+	<key>UISupportedInterfaceOrientations</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+	</array>
 </dict>
 </plist>
