--- a/VersalityClub/ios/Info.plist
+++ b/VersalityClub/ios/Info.plist
@@ -19,7 +19,7 @@
 				<string>AppIcon29x29@3x.png</string>
 				<string>AppIcon40x40@2x.png</string>
 				<string>AppIcon60x60@2x.png</string>
-				<string>AppIcon60x60@3x.png</string>
+                                <string>AppIcon60x60@3x.png</string>
 			</array>
 		</dict>
 	</dict>
@@ -56,8 +56,8 @@
 	</array>
 	<key>UIFileSharingEnabled</key>
 	<string>YES</string>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+        <key>UILaunchStoryboardName</key>
+        <string>Launch</string>
 	<key>UIRequiresFullScreen</key>
 	<true/>
 	<key>UIStatusBarHidden</key>
