--- a/VersalityClub/ios/Info.plist
+++ b/VersalityClub/ios/Info.plist
@@ -8,21 +8,12 @@
 	<string>Versality</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleIconName</key>
+	<string>AppIcon</string>
 	<key>CFBundleIcons</key>
-	<dict>
-		<key>CFBundlePrimaryIcon</key>
-		<dict>
-			<key>CFBundleIconFiles</key>
-			<array>
-				<string>AppIcon29x29.png</string>
-				<string>AppIcon29x29@2x.png</string>
-				<string>AppIcon29x29@3x.png</string>
-				<string>AppIcon40x40@2x.png</string>
-				<string>AppIcon60x60@2x.png</string>
-                                <string>AppIcon60x60@3x.png</string>
-			</array>
-		</dict>
-	</dict>
+	<dict/>
+	<key>CFBundleIcons~ipad</key>
+	<dict/>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -32,9 +23,9 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>${QMAKE_SHORT_VERSION}</string>
+	<string>0.8</string>
 	<key>CFBundleVersion</key>
-	<string>${QMAKE_FULL_VERSION}</string>
+	<string>6</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>MinimumOSVersion</key>
@@ -46,6 +37,8 @@
 	</dict>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>Location information needed to display promotions that are relevant to you</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Location information needed to display promotions that are relevant to you</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Location information needed to display promotions that are relevant to you</string>
 	<key>UIBackgroundModes</key>
@@ -55,9 +48,9 @@
 		<string>remote-notification</string>
 	</array>
 	<key>UIFileSharingEnabled</key>
-	<string>YES</string>
-        <key>UILaunchStoryboardName</key>
-        <string>Launch</string>
+	<true/>
+	<key>UILaunchStoryboardName</key>
+	<string>Launch</string>
 	<key>UIRequiresFullScreen</key>
 	<true/>
 	<key>UIStatusBarHidden</key>
